--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <h1>
 <a id="demo" class="anchor" href="#demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo</h1>
 
+<p><a href="https://newton.ai/demo">Click here for a live demo</a></p>
+
 <h1>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
 
